removing bad options for java8