@@ -107,7 +107,7 @@
 					<version>2.18</version>
 					<configuration>
 						<!-- Skip the default running of this plug-in (or everything is run twice...see below) -->
-						<argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
+						<argLine>-Xmx2048m</argLine>
 						<skip>true</skip>
 						<!-- Show 100% of the lines from the stack trace (doesn't work) -->
 						<trimStackTrace>false</trimStackTrace>
